--- a/index.html
+++ b/index.html
@@ -186,50 +186,87 @@
 
 
     <!-- Встраиваемое Событие для 1 кубика  Bad practice-->
-    <script
-        src="metanit_js_part10 - События, Обработка событий.js/Обработка событий, встроенные обработчики- 1.js"></script>
+    <!-- <script src="metanit_js_part10 - События, Обработка событий.js/Обработка событий, встроенные обработчики- 1.js"></script> -->
 
     <!-- Обработка событий через свойство элементов и eventTarget addEventListener-->
-    <script
-        src="metanit_js_part10 - События, Обработка событий.js/Обработка событий, свойства обработчиков - 2.js"></script>
+    <!-- <script src="metanit_js_part10 - События, Обработка событий.js/Обработка событий, свойства обработчиков - 2.js"></script> -->
 
     <!-- Обработка восходящих и нисходящих событий, а также запрет их распространения -->
-    <script
-        src="metanit_js_part10 - События, Обработка событий.js/Распространение событий DOM chain call - 3.js"></script>
+    <!-- <script src="metanit_js_part10 - События, Обработка событий.js/Распространение событий DOM chain call - 3.js"></script> -->
 
     <!-- Обработка событий мыши -->
-    <script src="metanit_js_part10 - События, Обработка событий.js/Обработка событий мыши - 4.js"></script>
+    <!-- <script src="metanit_js_part10 - События, Обработка событий.js/Обработка событий мыши - 4.js"></script> -->
 
     <!-- Обработка событий клавиатуры -->
-    <script src="metanit_js_part10 - События, Обработка событий.js/Обработка событий клавиатуры - 5.js"></script>
+    <!-- <script src="metanit_js_part10 - События, Обработка событий.js/Обработка событий клавиатуры - 5.js"></script> -->
 
     <!-- Работа с формами - поиск форм и её элементов -->
-    <script src="metanit_js_part11 - Формы и их элементы/Работа с формами - 1.js"></script>
+    <!-- <script src="metanit_js_part11 - Формы и их элементы/Работа с формами - 1.js"></script> -->
 
     <!-- Работа с формами - кнопки, отлавливаем событие click-->
-    <script src="metanit_js_part11 - Формы и их элементы/Кнопки - 2.js"></script>
+    <!-- <script src="metanit_js_part11 - Формы и их элементы/Кнопки - 2.js"></script> -->
 
     <!-- Работа с формами - текстовые поля, onTextChanged, onKeyPressed и тд-->
-    <script src="metanit_js_part11 - Формы и их элементы/Текстовые поля - 3.js"></script>
+    <!-- <script src="metanit_js_part11 - Формы и их элементы/Текстовые поля - 3.js"></script> -->
 
     <!-- Работа с формами - checkbox и radiobutton -->
-    <script src="metanit_js_part11 - Формы и их элементы/Чекбоксы и переключатели - 4.js"></script>
+    <!-- <script src="metanit_js_part11 - Формы и их элементы/Чекбоксы и переключатели - 4.js"></script> -->
 
     <!-- Работа с формами - списки select -->
-    <script src="metanit_js_part11 - Формы и их элементы/Списки, дроплисты select - 5.js"></script>
+    <!-- <script src="metanit_js_part11 - Формы и их элементы/Списки, дроплисты select - 5.js"></script> -->
 
     <!-- Новый html element, показывающий время при клике -->
-    <script src="metanit_js_part9 - DOM работа с html/Создание_Своего_Элемента_HTML - 8.js"></script>
-
+    <!-- <script src="metanit_js_part9 - DOM работа с html/Создание_Своего_Элемента_HTML - 8.js"></script> -->
 
     <!-- Сериализация, десериализация -->
-    <script src="metanit_js_part12 - JSON/Введение в JSON - 1.js"></script>
+    <!-- <script src="metanit_js_part12 - JSON/Введение в JSON - 1.js"></script> -->
 
     <!-- Куки -->
-    <script src="metanit_js_part13 - Хранение данных (куки,webstorage)/Куки - 1.js"></script>
+    <!-- <script src="metanit_js_part13 - Хранение данных (куки,webstorage)/Куки - 1.js"></script> -->
 
-    <!-- WebStorage -->
-    <script src="metanit_js_part13 - Хранение данных (куки,webstorage)/WebStorage - 2.js"></script>
+    <!-- WebStorage - localStorage -->
+    <!-- <script src="metanit_js_part13 - Хранение данных (куки,webstorage)/WebStorage - 2.js"></script> -->
+
+    <!-- Итераторы -->
+    <!-- <script src="metanit_js_part14 - Коллекции, Итераторы, генераторы/Итераторы - 1.js"></script> -->
+
+    <!-- Генераторы -->
+    <!-- <script src="metanit_js_part14 - Коллекции, Итераторы, генераторы/Генераторы - 2.js"></script> -->
+
+    <!-- Set  -->
+    <!-- <script src="metanit_js_part14 - Коллекции, Итераторы, генераторы/Set - 3.js"></script> -->
+
+    <!-- Map  -->
+    <!-- <script src="metanit_js_part14 - Коллекции, Итераторы, генераторы/Map - 4.js"></script> -->
+
+    <!-- Promises - получение результата, обработка ошибок -->
+    <!-- <script src="metanit_js_part15 - Promise, async, await/Введение в promise (результат, ошибки) - 1.js"></script> -->
+
+    <!-- Promises - создание цепочек промисов -->
+    <!-- <script src="metanit_js_part15 - Promise, async, await/Создание цепочек промисов - 2.js"></script> -->
+
+    <!-- Promises - группировка промисов -->
+    <!-- <script src="metanit_js_part15 - Promise, async, await/Promise - all, allSettled, any, race - 3.js"></script> -->
+
+    <!-- Async, await -->
+    <!-- <script src="metanit_js_part15 - Promise, async, await/Async, await - 4.js"></script> -->
+
+    <!-- Async, await - асинхронные итераторы -->
+    <!-- <script src="metanit_js_part15 - Promise, async, await/Асинхронные итераторы - 5.js"></script> -->
+
+    <!-- Async, await - асинхронные генераторы -->
+    <!-- <script src="metanit_js_part15 - Promise, async, await/Асинхронные генераторы - 6.js"></script> -->
+
+    <!-- Ajax - GET запрос к ресурсу-->
+    <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Объект XMLHttpRequest GET request - 1.js"></script>
+
+    <!-- Ajax - POST запрос к серверу-->
+    <script
+        src="metanit_js_part16 - Ajax (Async javascript and xml)/Объект XMLHttpRequest POST request - 2.js"></script>
+
+    <!-- Ajax - Promise в ajax-запросах-->
+    <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Promise в Ajax-запросах - 3.js"></script>
+
 
 </body>
 
