4rd commit, probably last

--- a/index.html
+++ b/index.html
@@ -258,15 +258,39 @@
     <!-- <script src="metanit_js_part15 - Promise, async, await/Асинхронные генераторы - 6.js"></script> -->
 
     <!-- Ajax - GET запрос к ресурсу-->
-    <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Объект XMLHttpRequest GET request - 1.js"></script>
+    <!-- <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Объект XMLHttpRequest GET request - 1.js"></script> -->
 
     <!-- Ajax - POST запрос к серверу-->
-    <script
-        src="metanit_js_part16 - Ajax (Async javascript and xml)/Объект XMLHttpRequest POST request - 2.js"></script>
+    <!-- <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Объект XMLHttpRequest POST request - 2.js"></script> -->
 
     <!-- Ajax - Promise в ajax-запросах-->
-    <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Promise в Ajax-запросах - 3.js"></script>
+    <!-- <script src="metanit_js_part16 - Ajax (Async javascript and xml)/Promise в Ajax-запросах - 3.js"></script> -->
 
+    <!-- Локализация списков -->
+    <!-- <script src="metanit_js_part17 - Локализация/Локализация списков - 1.js"></script> -->
+
+    <!-- Локализация дат и времени -->
+    <!-- <script src="metanit_js_part17 - Локализация/Локализация дат и времени - 2.js"></script> -->
+
+    <!-- Локализация названий (стран, регионов, языков, валюты и тп) -->
+    <!-- <script src="metanit_js_part17 - Локализация/Локализация названий (стран, регионов, языков и тд) - 3.js"></script> -->
+
+    <!-- Форматирование чисел -->
+    <!-- <script src="metanit_js_part17 - Локализация/Форматирование чисел - 4.js"></script> -->
+
+    <!-- Модули -->
+    <!-- <script type="module" src="metanit_js_part18 - Модули/Введение в модули - 1/main.js"></script>
+    <script type="module" src="metanit_js_part18 - Модули/Импорт модуля - 2/moduleWhichImports.js"></script>
+    <script type="module" src="metanit_js_part18 - Модули/Экспорт и импорт компонентов модулей - 3/main.js"></script>
+    <script type="module" src="metanit_js_part18 - Модули/Экспорт и импорт по умолчанию - 4/main.js"></script>
+    <script type="module" src="metanit_js_part18 - Модули/Динамическая загрузка модуля - 6/main.js"></script> -->
+
+    <!-- Fetch API -->
+    <!-- <script type="module" src="metanit_js_part19 - Fetch API/Функция fetch - 1.js"></script> -->
+    <!-- <script type="module" src="metanit_js_part19 - Fetch API/Получение ответа. Объект Response - 2.js"></script> -->
+    <!-- <script type="module" src="metanit_js_part19 - Fetch API/Получение данных из ответа - 3.js"></script> -->
+    <!-- <script type="module" src="metanit_js_part19 - Fetch API/Параметры запроса fetch. Отправка данных - 4.js"></script> -->
+    <script type="module" src="metanit_js_part19 - Fetch API/Создание клиента для REST API - 5.js"></script>
 
 </body>
 
